# MatrixGame

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md
Extras/MaxExp/: CMakeLists.txt
Extras/MaxExp/cmake/: Find3DSMAX.cmake
Extras/MaxExp/src/: ParCenter.cpp  ParGroup.cpp  ParMatrix.cpp  ParObj.cpp  animout.cpp  export.cpp  main.aps  main.cpp  main.def  main.hpp  main.rc  maintok.hpp  resource.hpp  stdafx.h  veroverrides.hpp
MatrixGame/: CMakeLists.txt  MatrixGame.aps  MatrixGame.rc  Resource.h
MatrixGame/src/: CAnimation.cpp  CConstructor.cpp  CConstructor.h  CCounter.cpp  CCounter.h  CHistory.cpp  CHistory.h  CIFaceButton.cpp  CIFaceElement.cpp  CIFaceElement.h  CIFaceImage.cpp  CIFaceImage.h  CIFaceMenu.cpp  CIFaceStatic.cpp  CInterface.cpp  Common.hpp  DevConsole.cpp  DevConsole.hpp  Interface.h  MatrixAIGroup.cpp  MatrixCamera.cpp  MatrixCamera.hpp  MatrixConfig.cpp  MatrixConfig.hpp  MatrixCursor.cpp  MatrixCursor.hpp  MatrixDebugInfo.cpp  MatrixDebugInfo.hpp  MatrixEffect.cpp  MatrixEffect.hpp  MatrixEffectBigBoom.cpp  MatrixEffectBillboard.cpp  MatrixEffectBillboard.hpp  MatrixEffectDust.cpp  MatrixEffectDust.hpp  MatrixEffectElevatorField.cpp  MatrixEffectExplosion.cpp  MatrixEffectExplosion.hpp  MatrixEffectFirePlasma.cpp  MatrixEffectFlame.cpp  (+100 more)
MatrixGame/src/Effects/: MatrixEffect.cpp  MatrixEffect.hpp  MatrixEffectBigBoom.cpp  MatrixEffectBigBoom.hpp  MatrixEffectBillboard.cpp  MatrixEffectBillboard.hpp  MatrixEffectDust.cpp  MatrixEffectDust.hpp  MatrixEffectElevatorField.cpp  MatrixEffectElevatorField.hpp  MatrixEffectExplosion.cpp  MatrixEffectExplosion.hpp  MatrixEffectFirePlasma.cpp  MatrixEffectFirePlasma.hpp  MatrixEffectFlame.cpp  MatrixEffectFlame.hpp  MatrixEffectKonus.cpp  MatrixEffectKonus.hpp  MatrixEffectLandscapeSpot.cpp  MatrixEffectLandscapeSpot.hpp  MatrixEffectLightening.cpp  MatrixEffectLightening.hpp  MatrixEffectMoveTo.cpp  MatrixEffectMoveTo.hpp  MatrixEffectMovingObject.cpp  MatrixEffectMovingObject.hpp  MatrixEffectPath.cpp  MatrixEffectPath.hpp  MatrixEffectPointLight.cpp  MatrixEffectPointLight.hpp  MatrixEffectRepair.cpp  MatrixEffectRepair.hpp  MatrixEffectSelection.cpp  MatrixEffectSelection.hpp  MatrixEffectShleif.cpp  MatrixEffectShleif.hpp  MatrixEffectSmokeAndFire.cpp  MatrixEffectSmokeAndFire.hpp  MatrixEffectWeapon.cpp  MatrixEffectWeapon.hpp  (+2 more)
MatrixGame/src/Interface/: CAnimation.cpp  CAnimation.h  CConstructor.cpp  CConstructor.h  CCounter.cpp  CCounter.h  CHistory.cpp  CHistory.h  CIFaceButton.cpp  CIFaceButton.h  CIFaceElement.cpp  CIFaceElement.h  CIFaceImage.cpp  CIFaceImage.h  CIFaceMenu.cpp  CIFaceMenu.h  CIFaceStatic.cpp  CIFaceStatic.h  CInterface.cpp  CInterface.h  Interface.h  MatrixHint.cpp  MatrixHint.hpp
MatrixGame/src/Logic/: MatrixAIGroup.cpp  MatrixAIGroup.h  MatrixEnvironment.cpp  MatrixEnvironment.h  MatrixLogicSlot.cpp  MatrixLogicSlot.h  MatrixRoadNetwork.cpp  MatrixRoadNetwork.hpp  MatrixRule.cpp  MatrixRule.h  MatrixState.cpp  MatrixState.h  MatrixTactics.cpp  MatrixTactics.h
MatrixGame/src/Text/: Font.cpp  Font.hpp  Parser.cpp  Parser.hpp  Render.cpp  Render.hpp
MatrixLib/: CMakeLists.txt
MatrixLib/3G/: 3g.cpp  3g.hpp  3g.pch  BigIB.cpp  BigIB.hpp  BigVB.cpp  BigVB.hpp  CBillboard.cpp  CCamera.hpp  CMakeLists.txt  CWorld.hpp  CWorldObject.hpp  Cache.cpp  Cache.hpp  D3DControl.hpp  DeviceState.cpp  DeviceState.hpp  Form.cpp  Form.hpp  Helper.cpp  Helper.hpp  Math3D.cpp  Math3D.hpp  ShadowProj.cpp  ShadowProj.hpp  ShadowStencil.cpp  ShadowStencil.hpp  Texture.cpp  Texture.hpp  VectorObject.cpp  VectorObject.hpp
MatrixLib/3G/include/: 3g.hpp  BigIB.hpp  BigVB.hpp  CBillboard.hpp  CCamera.hpp  CCoordSystem.hpp  CVertexBuffer.hpp  CWorld.hpp  CWorldObject.hpp  Cache.hpp  D3DControl.hpp  DeviceState.hpp  Form.hpp  Helper.hpp  Math3D.hpp  SVertex.hpp  ShadowProj.hpp  ShadowStencil.hpp  Texture.hpp  VectorObject.hpp
MatrixLib/3G/src/: 3g.cpp  BigIB.cpp  BigVB.cpp  CBillboard.cpp  Cache.cpp  DeviceState.cpp  Form.cpp  Helper.cpp  Math3D.cpp  ShadowProj.cpp  ShadowStencil.cpp  Texture.cpp  VectorObject.cpp  stdafx.h
MatrixLib/Base/: Base.hpp  Base.pch  BaseDef.hpp  CBlockPar.cpp  CBlockPar.hpp  CBuf.cpp  CBuf.hpp  CDWORDMap.cpp  CDWORDMap.hpp  CException.cpp  CException.hpp  CFile.cpp  CFile.hpp  CHeap.cpp  CHeap.hpp  CMain.cpp  CMain.hpp  CMakeLists.txt  CRC32.cpp  CRC32.hpp  CReminder.cpp  CReminder.hpp  CStorage.cpp  CStorage.hpp  CStr.cpp  CStr.hpp  CWStr.cpp  CWStr.hpp  CWStrFormat.cpp  Mem.cpp  Mem.hpp  Pack.cpp  Pack.hpp  Registry.cpp  Registry.hpp  Tracer.cpp  Tracer.hpp  fps_counter.hpp  random.cpp  random.hpp  (+2 more)
MatrixLib/Base/include/: Base.hpp  BaseDef.hpp  CBlockPar.hpp  CBuf.hpp  CDWORDMap.hpp  CException.hpp  CFile.hpp  CHeap.hpp  CList.hpp  CMain.hpp  CRC32.hpp  CReminder.hpp  CStorage.hpp  CStr.hpp  CWStr.hpp  Mem.hpp  Pack.hpp  Registry.hpp  Tracer.hpp
MatrixLib/Base/src/: CBlockPar.cpp  CBuf.cpp  CDWORDMap.cpp  CException.cpp  CFile.cpp  CHeap.cpp  CList.cpp  CMain.cpp  CRC32.cpp  CReminder.cpp  CStorage.cpp  CStr.cpp  CWStr.cpp  CWStrFormat.cpp  Mem.cpp  Pack.cpp  Registry.cpp  Tracer.cpp  stdafx.h
MatrixLib/Bitmap/: Bitmap.pch  CBitmap.cpp  CBitmap.hpp  CMakeLists.txt  FilePNG.cpp  FilePNG.hpp  sharpen.cpp
MatrixLib/Bitmap/include/: Bitmap.hpp  BitmapDef.hpp  CBitmap.hpp
MatrixLib/Bitmap/src/: CBitmap.cpp  sharpen.cpp  stdafx.cpp  stdafx.h
MatrixLib/DebugMsg/: CMakeLists.txt  Command.cpp  DebugMsg.cpp  DebugMsg.h  DebugMsg.pch  FastBuf.cpp  Main.cpp  SynBuf.cpp
MatrixLib/DebugMsg/include/: DebugMsg.h  Main.h
MatrixLib/DebugMsg/src/: Command.cpp  DebugMsg.cpp  FastBuf.cpp  StdAfx.h  SynBuf.cpp  main.cpp
MatrixLib/FileJPG/: FileJPG.cpp
MatrixLib/FileJPG/include/: FileJPG.hpp
MatrixLib/FileJPG/src/: FileJPG.cpp
MatrixLib/FilePNG/: CMakeLists.txt  FilePNG.cpp  FilePNG.hpp
MatrixLib/FilePNG/include/: FilePNG.hpp
MatrixLib/FilePNG/src/: FilePNG.cpp
MatrixLib/Window/: CWindow.cpp  CWindow.hpp  Window.hpp  Window.pch  WindowDef.hpp
MatrixLib/Window/include/: CWindow.hpp  WindowDef.hpp
MatrixLib/Window/src/: CWindow.cpp  stdafx.h
(+6 files in other folders)
